--- a/test/hosts.yaml
+++ b/test/hosts.yaml
@@ -1,6 +1,6 @@
-- local1:
-   - local1 2
-   - local2 2
-- local2:
-   - local1 2
-   - local2 2
+- tsukuba001 :
+  - tsukuba002
+  - tsukuba003
+- tsukuba005 :
+  - tsukuba006
+  - tsukuba007
