--- a/test/Rakefile
+++ b/test/Rakefile
@@ -1,8 +1,9 @@
-N=20000
+N=10
 
 rule ".o" => ".c" do |t|
   #sh "sleep 0.1; echo --- #{t.name} $$ `hostname` `pwd` ---"
   sh "hostname >& /dev/null"
+  #sh "env"
 end
 
 (1..N).map do |i|
@@ -16,4 +17,3 @@ task :default => obj do
   puts a.shift
   a.each{|l| puts l if /pwrake/=~l}
 end
-
