--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,30 @@
+*.gem
+*.rbc
+.bundle
+.config
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
 .config
 *~
 */*~
 */*/*~
+*.bak
+*/*.bak
+*/*/*.bak
 .#*
 */.#*
 */*/.#*
-InstalledFiles
 rhosts
+spec/*/*.dat
+spec/*/*.csv
