each command is invoked through /bin/sh commandline instead of spawn

--- a/test/Rakefile
+++ b/test/Rakefile
@@ -4,6 +4,7 @@ rule ".o" => ".c" do |t|
   #sh "sleep 0.1; echo --- #{t.name} $$ `hostname` `pwd` ---"
   sh "pwd"
   sh "hostname"
+  sh "sleep 15"
   sh "ls hoge || echo"
   #sh "sleep 2; echo -n '#{t.name} : '; hostname"
   #sh "sleep 2"
