--- a/test/pwrake_conf.yaml
+++ b/test/pwrake_conf.yaml
@@ -1,6 +1,7 @@
 HOSTFILE : hosts.yaml
 
 # LOGFILE : Pwrake-%Y%m%dT%H%M%S-{Process.pid}.log
+LOGFILE : true
 
 #FILESYSTEM : gfarm
 
@@ -13,5 +14,5 @@ SCHEDULER : gfarm_affinity
 GFARM_MOUNT_DIR : /tmp
 GFARM_MOUNT_SUBDIR : /tmp
 
-#TASKLOG: true
-#PROFILE: true
+TASKLOG: true
+PROFILE: true
